--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link-active" href="">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <a class="header__logo">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип" />
+      </a>
+
+      <div class="address header__address">
+        <a class="header__link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <address class="address">наб. Принсенграхт 263-265, Амстердам</address>
+      </div>
+    
+    </header>
     <main>
       <section class="cover"></section>
       <section class="lots"></section>
