добавлена секция cover

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
+
     <header class="header">
-      
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
@@ -35,12 +35,27 @@
         <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <address class="address">наб. Принсенграхт 263-265, Амстердам</address>
       </div>
-    
     </header>
+
     <main>
-      <section class="cover"></section>
+
+      <section class="cover">
+        <h1 class="cover__title">
+          <span class="aligned-text"><span class="letter-spacing-extended-30px">о</span><span class="letter-spacing-extended-60px">но</span></span>
+          <span class="aligned-text_center"><span class="letter-spacing-extended-30px">те</span><span class="letter-spacing-extended-60px">бе</span></span>
+          <span class="aligned-text_right"><span class="letter-spacing-extended-60px">н</span><span class="letter-spacing-extended-30px">ад</span><span class="no-letter-spacing">о</span></span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+
+        <div class="overlay"></div>
+      </section>
+
       <section class="lots"></section>
       <section class="about"></section>
+
     </main>
     <footer class="footer"></footer>
   </body>
