--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </a>
 
       <div class="address header__address">
-        <a class="header__link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="header__link" href="tel:+9&nbsp;999&nbsp;555&nbsp;5555">+9 999 555 5555</a>
         <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <address class="address">наб. Принсенграхт 263-265, Амстердам</address>
       </div>
@@ -47,7 +47,7 @@
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <a href=""><button class="bet-button">Сделать ставку</button></a>
+          <button class="bet-button">Сделать ставку</button>
         </div>
 
         <div class="overlay"></div>
@@ -92,7 +92,7 @@
       <section class="about">
         <div class="about__columns">
           <div class="about__logo">
-            <img class="about__logo-image" src="./images/logo-white.svg">
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип">
           </div>
 
           <div class="about__description">
@@ -107,7 +107,7 @@
 
     <footer class="footer">
       <div class="address">
-        <a class="header__link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="header__link" href="tel:+9 999 555 5555">+9&nbsp;999&nbsp;555&nbsp;5555</a>
         <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <address class="address">наб. Принсенграхт 263-265, <br>Амстердам</address>
       </div>
@@ -129,17 +129,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="./images/yt.svg">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="иконка Ютуб">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="./images/vk.svg">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="иконка Вконтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="./images/pinterest.svg">
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="иконка Пинтерест">
           </a>
         </li>
       </ul>
