убрала пробелы в href

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <footer class="footer">
       <div class="address">
-        <a class="header__link" href="tel:+9 999 555 5555">+9&nbsp;999&nbsp;555&nbsp;5555</a>
+        <a class="header__link" href="tel:+9&nbsp;999&nbsp;555&nbsp;5555">+9 999 555 5555</a>
         <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <address class="address">наб. Принсенграхт 263-265, <br>Амстердам</address>
       </div>
