--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link-active" href="">главная</a>
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link header__link-active" href="#">главная</a>
           </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="">посмотреть лоты</a>
+          <li>
+            <a class="header__link" href="#section-lots">посмотреть лоты</a>
           </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="">об аукционе</a>
+          <li>
+            <a class="header__link" href="#section-about">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -53,7 +53,7 @@
         <div class="overlay"></div>
       </section>
 
-      <section class="lots">
+      <section class="lots" id="section-lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
@@ -89,7 +89,7 @@
         <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
 
-      <section class="about">
+      <section class="about" id="section-about">
         <div class="about__columns">
           <div class="about__logo">
             <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип">
@@ -114,31 +114,31 @@
 
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item">
+          <li>
             <a class="footer__menu-link footer__menu-link_active" href="">главная</a>
           </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="">посмотреть лоты</a>
+          <li>
+            <a class="footer__menu-link" href="#section-lots">посмотреть лоты</a>
           </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="">об аукционе</a>
+          <li>
+            <a class="footer__menu-link" href="#section-about">об аукционе</a>
           </li>
         </ul>
       </nav>
 
       <ul class="footer__social-list">
-        <li class="footer__social-list-item">
-          <a class="footer__social-link">
+        <li>
+          <a class="footer__social-link" href="#" target="_blank">
             <img class="footer__social-icon" src="./images/yt.svg" alt="иконка Ютуб">
           </a>
         </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link">
+        <li>
+          <a class="footer__social-link" href="#" target="_blank">
             <img class="footer__social-icon" src="./images/vk.svg" alt="иконка Вконтакте">
           </a>
         </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link">
+        <li>
+          <a class="footer__social-link" href="#" target="_blank">
             <img class="footer__social-icon" src="./images/pinterest.svg" alt="иконка Пинтерест">
           </a>
         </li>
