правки после 1го ревью

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
       </nav>
 
       <a class="header__logo">
-        <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип" />
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип 'Оно тебе надо'" />
       </a>
 
-      <div class="address header__address">
-        <a class="header__link" href="tel:+9&nbsp;999&nbsp;555&nbsp;5555">+9 999 555 5555</a>
-        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <address class="address">наб. Принсенграхт 263-265, Амстердам</address>
+      <div class="header__address">
+        <address class="address">
+          <a class="header__link" href="tel:+9&nbsp;999&nbsp;555&nbsp;5555">+9 999 555 5555</a>
+          <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+      </address>
       </div>
     </header>
 
@@ -92,7 +94,7 @@
       <section class="about" id="section-about">
         <div class="about__columns">
           <div class="about__logo">
-            <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип">
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип 'Оно тебе надо'">
           </div>
 
           <div class="about__description">
@@ -106,11 +108,11 @@
     </main>
 
     <footer class="footer">
-      <div class="address">
+      <address class="address">
         <a class="header__link" href="tel:+9&nbsp;999&nbsp;555&nbsp;5555">+9 999 555 5555</a>
         <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <address class="address">наб. Принсенграхт 263-265, <br>Амстердам</address>
-      </div>
+        <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+      </address>
 
       <nav class="footer__menu">
         <ul class="footer__menu-list">
